  address underlying BSD socket is currently bound to.
- Passing request details to access control callback at CommandResponder
  reworked towards more robust and simple design with the execution observer
  facility.
- MIB instrumentation example improved to cover table index building facility.
- Handle the case of null writer at Debug printer.
- Fix to decodeMessageVersion() to withstand broken SNMP messages.
- Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
  cope with missing bits identifieirs at prettyPrint().
- Memory leak fixed in CommandForwarder examples.
- Fix to BULK CommandGenerator to use the same nonRepeaters OIDs across
  multiple GETBULK iterations so returned table for nonRepeaters columns 
  would hold the same var-bind.
- Fix to CommandGenerator to make sendRequestHandle persistent across
  multiple iterations of GETNEXT/GETBULK queries.
- Fix to sendNotification() error handling at NotificationOriginator.
- Fix to preserve possible 'fixed length' setting atrfc1902.OctetString
  on clone()'ing and subtype()'ing.
- Fix to rfc1902.OctetString & Bits to base them on OctetString class to
  make the 'fixed length' property working.
- Fix to .clone() method of rfc1902.Bits class to make its signature
  matching the rest of classes. This may broke code which used to pass
  namedValue parameter positionally rather than binding it by name.
- Fix to PDU translation service (proto.proxy.rfc2576) to make it
  initializing errorIndex & errorStatus components of the resulting PDU.

Revision 4.2.5
--------------

- License updated to vanilla BSD 2-Clause to ease package use
  (http://opensource.org/licenses/BSD-2-Clause).
- A dozen of lightweight Twisted-based example scripts replaced more
  complex example implementations used previously.
- SNMP Proxy example apps separated into a larger set of more specialized
  ones.
- Most of Command Generator examples re-pointed to a live SNMP Agent