@@ -1,6 +1,6 @@
 # SNMP v1 & v2c message processing models implementation
 import sys
-from pyasn1.codec.ber import decoder
+from pyasn1.codec.ber import decoder, eoo
 from pyasn1.type import univ
 from pyasn1.compat.octets import null
 from pyasn1.error import PyAsn1Error
@@ -271,6 +271,11 @@ class SnmpV1MessageProcessingModel(AbstractMessageProcessingModel):
                 )
 
         debug.logger & debug.flagMP and debug.logger('prepareDataElements: %s' % (msg.prettyPrint(),))
+
+        if eoo.endOfOctets.isSameTypeWith(msg):
+            raise error.StatusInformation(
+                errorIndication=errind.parseError
+            )
 
         # rfc3412: 7.2.3
         msgVersion = messageProcessingModel = msg.getComponentByPosition(0)
