@@ -40,7 +40,8 @@ Revision 4.2.6rc0
   facility.
 - MIB instrumentation example improved to cover table index building facility.
 - Handle the case of null writer at Debug printer.
-- Fix to decodeMessageVersion() to withstand broken SNMP messages.
+- Multiple fixes to verify pyasn1 decoder.decode() return to withstand
+  broken SNMP messages or its components.
 - Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
   cope with missing bits identifieirs at prettyPrint().
 - Memory leak fixed in CommandForwarder examples.
